# slight-animation

./: CMakeLists.txt  README.md  main.cpp  requirements.sh  script.h
assets/scripts/: qwerty.json  sample-1.json  tmp.json
scripts/: sample-1.sa
tests/: CMakeLists.txt  script_tests.cpp
